2007-08-30  Brian Gough  <bjg@network-theory.co.uk>

	* psi.c (psi_complex_rhp): accumulate error, to allow for
	cancellation effects

	* beta.c (gsl_sf_lnbeta_sgn_e): added missing factor of 2 for
	error.

2007-08-27  Brian Gough  <bjg@network-theory.co.uk>

	* beta_inc.c (gsl_sf_beta_inc_e): handle cases where a<=0 or b<=0

2007-04-27  Brian Gough  <bjg@network-theory.co.uk>

	* lambert.c (halley_iteration): increase tolerance to prevent
	exceeding max iters due to finite precision

2007-04-04  Brian Gough  <bjg@network-theory.co.uk>

	* laguerre.c (gsl_sf_laguerre_n_e): use recursion for a=0 in
	addition to a>0
	
2007-02-17  Brian Gough  <bjg@network-theory.co.uk>

	* log.c (gsl_sf_log_e): removed HIDE_INLINE_STATIC

	* exp.c (gsl_sf_exp_e): removed HIDE_INLINE_STATIC

2007-02-14  Brian Gough  <bjg@network-theory.co.uk>

	* mathieu_charv.c: made solve_cubic static

2007-02-12  Brian Gough  <bjg@network-theory.co.uk>

	* mathieu_charv.c (figi): ensure that e[ii] is set when
	e2[ii]==0.0 and there is no error condition, as per the original
	eispack routine

2007-02-09  Brian Gough  <bjg@network-theory.co.uk>

	* ellint.c (gsl_sf_ellint_F_e): do argument reduction for phi>pi/2
	(gsl_sf_ellint_E_e): do argument reduction for phi>pi/2
	(gsl_sf_ellint_P_e): do argument reduction for phi>pi/2
	(gsl_sf_ellint_D_e): do argument reduction for phi>pi/2
	(gsl_sf_ellint_Dcomp_e): added complete D integral
	(gsl_sf_ellint_Pcomp_e): added complete P integral

2007-01-31  Brian Gough  <bjg@network-theory.co.uk>

	* beta.c (gsl_sf_lnbeta_sgn_e): added to support calculations with
	negative a,b
	(gsl_sf_lnbeta_e): rewritten in terms of gsl_sf_lnbeta_sgn_e
	(gsl_sf_beta_e): handle negative a,b

	* gamma.c (gsl_sf_lngamma_sgn_e): make error calculations an exact
	copy of gsl_sf_lngamma_e (these functions could be merged to avoid
	duplication)

2007-01-29  Brian Gough  <bjg@network-theory.co.uk>

	* test_legendre.c (test_legendre): added extra test cases for
	underflow
